force-app/main/default/objects/Project_Team_Member__c/fields/Employee_Cost__c.field-meta.xml
<CustomField>
    <fullName>Employee_Cost__c</fullName>
    <label>Employee Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>