force-app/main/default/objects/Project_Team_Member__c/fields/Employee_Cost_Based_On__c.field-meta.xml
<CustomField>
    <fullName>Employee_Cost_Based_On__c</fullName>
    <formula>(Employee_Cost__c * Allocation__c) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Cost Based On %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>