force-app/main/default/objects/Project_Team_Member__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Bit</fullName>
            </value>
            <value>
                <fullName>Cost per hour</fullName>
            </value>
            <value>
                <fullName>Rate per hour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>