force-app/main/default/objects/Project_Team_Member__c/fields/Rate_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_Hour__c</fullName>
    <label>Rate Per Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>