force-app/main/default/objects/Project_Team_Member__c/validationRules/Assigned_to_should_not_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigned_to_should_not_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Assigned_To__c)</errorConditionFormula>
    <errorDisplayField>Assigned_To__c</errorDisplayField>
    <errorMessage>Please Fill Assigned To</errorMessage>
</ValidationRule>