force-app/main/default/objects/Project_Team_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Allocation__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Project__c</columns>
    <columns>Rate_Per_Hour__c</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>